--- a/views/home.templ
+++ b/views/home.templ
@@ -3,11 +3,11 @@ package views
 templ Home() {
 	@Page(true) {
 		<h1 class="text-3xl font-bold text-center my-4">
-			Car Show Example App
+			Events Example App
 		</h1>
 		<div class="flex justify-center my-8">
-			<a href="/cars" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-				See Available Cars
+			<a href="/events" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+				See Available Events
 			</a>
 		</div>
 		<div class="flex justify-center my-8">
